--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 asgiref==3.8.1
+certifi==2025.6.15
+charset-normalizer==3.4.2
 Django==5.0.7
+django-oidc-provider==0.8.4
+future==1.0.0
 gunicorn==22.0.0
+idna==3.10
 packaging==24.1
+pycryptodomex==3.23.0
+pyjwkest==1.4.2
 python-decouple==3.8
 python-dotenv==1.0.1
+requests==2.32.4
+six==1.17.0
 sqlparse==0.5.1
+tzdata==2025.2
+urllib3==2.5.0
 whitenoise==6.7.0
